# wallfart

./: AUTHORS  Makefile.am  Makefile.in  README  README.md  config.h.in~  configure  configure.ac  mattmake
autom4te.cache/: output.1  requests  traces.0  traces.1
doc/: wallfart.man
doc/help/: README  wallfart_help_graphic.xpm
doc/help/src/: wallfart_help_graphicdotpng
doc/html/: README  wallfart.html
doc/man/: manpage.format
src/: Makefile.am  Makefile.in  makefile.gmake  wallfart.c  wallfart_colour.h  wallfart_complex.h  wallfart_data.c  wallfart_data.h  wallfart_help_content.c  wallfart_help_content.h  wallfart_help_graphic.xpm  wallfart_image.c  wallfart_image.h  wallfart_image_marshaller.c  wallfart_image_marshaller.h  wallfart_rgb_ctables.h  wallfart_types.h  wallfart_wallpaper.c  wallfart_wallpaper.h
